--- a/src/css/general/forms.css
+++ b/src/css/general/forms.css
@@ -3,7 +3,8 @@ label {
     width: 100%;
 }
 
-input {
+input,
+textarea {
     margin-top: 5px;
     width: 100%;
     border-radius: var(--border-radius);
