Entries can be filtered by date, order and search

--- a/src/css/general/forms.css
+++ b/src/css/general/forms.css
@@ -7,8 +7,6 @@ input,
 textarea {
     margin-top: 5px;
     width: 100%;
-    max-width: 100%;
-    min-width: 100%;
     border-radius: var(--border-radius);
     padding: 5px;
     border: 1px solid grey;
@@ -42,4 +40,16 @@ input:focus {
     margin-top: 5px;
     color: var(--success-color);
     font-size: 14px;
+}
+
+/* Filters */
+.filters-wrapper {
+    display: flex;
+    flex-direction: row;
+    gap: var(--flex-gap);
+    max-width: 100%;
+}
+
+.filter {
+    flex: 1;
 }
