--- a/src/css/general/forms.css
+++ b/src/css/general/forms.css
@@ -1,20 +1,23 @@
 /* General */
 label {
     width: 100%;
+    margin-bottom: 5px;
 }
 
 input,
 textarea {
-    margin-top: 5px;
     width: 100%;
     border-radius: var(--border-radius);
     padding: 5px;
-    border: 1px solid grey;
+    border-color: hsl(0, 0%, 80%);
+    border-style: solid;
+    border-width: 1px;
+    min-height: 100%;
 }
 
 input:focus {
     outline: none;
-    border-color: blue;
+    border-color: var(--pink);
 }
 
 /* Form layout */
@@ -47,7 +50,8 @@ input:focus {
     display: flex;
     flex-direction: row;
     gap: var(--flex-gap);
-    max-width: 100%;
+    max-width: 60%;
+    flex-wrap: wrap;
 }
 
 .filter {
