--- a/src/css/general/forms.css
+++ b/src/css/general/forms.css
@@ -15,7 +15,9 @@ textarea {
     min-height: 100%;
 }
 
-input:focus {
+input:focus,
+textarea:focus,
+select:focus {
     outline: none;
     border-color: var(--pink);
 }
@@ -25,6 +27,7 @@ input:focus {
     display: flex;
     flex-direction: column;
     gap: var(--flex-gap);
+    align-items: center;
 }
 
 .form-flex div {
@@ -52,6 +55,7 @@ input:focus {
     gap: var(--flex-gap);
     max-width: 60%;
     flex-wrap: wrap;
+    align-items: center;
 }
 
 .filter {
