--- a/src/css/general/layouts.css
+++ b/src/css/general/layouts.css
@@ -1,4 +1,17 @@
+#content {
+    padding: 20px;
+}
+
 .spaced-vertical-flex {
+    display: flex;
+    flex-direction: column;
+    gap: var(--flex-gap);
+}
+
+.box {
+    background-color: white;
+    border-radius: var(--border-radius);
+    padding: 20px;
     display: flex;
     flex-direction: column;
     gap: var(--flex-gap);
